# pg-mail-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/agents/: pg-hackers-briefing.agent.md  pg-hackers-researcher.agent.md
scripts/: demo.py  latest_threads.py  probe_url.py  smoke.py
src/pg_mail_mcp/: __init__.py  cli.py  config.py
src/pg_mail_mcp/ingest/: __init__.py  embedder.py  fetcher.py  parser.py  run.py  threader.py
src/pg_mail_mcp/server/: app.py  commitfest.py  tools.py
src/pg_mail_mcp/store/: __init__.py  git_log.py  repo.py  schema.sql  vec.py
